tests/rosetta/transpiler/C/align-columns.error
compile failed: exit status 1: /tmp/ctranspile1133628376/align-columns.mochi.c: In function ‘_mem’:
/tmp/ctranspile1133628376/align-columns.mochi.c:70:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   70 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile1133628376/align-columns.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile1133628376/align-columns.mochi.c: In function ‘newFormatter’:
/tmp/ctranspile1133628376/align-columns.mochi.c:154:39: warning: passing argument 1 of ‘list_append_intptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  154 |         fmtLines = list_append_intptr(fmtLines, &fmtLines_len, words);
      |                                       ^~~~~~~~
      |                                       |
      |                                       const char ***
/tmp/ctranspile1133628376/align-columns.mochi.c:34:39: note: expected ‘int **’ but argument is of type ‘const char ***’
   34 | static int** list_append_intptr(int **arr, size_t *len, int *val) {
      |                                 ~~~~~~^~~
/tmp/ctranspile1133628376/align-columns.mochi.c:154:64: warning: passing argument 3 of ‘list_append_intptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  154 |         fmtLines = list_append_intptr(fmtLines, &fmtLines_len, words);
      |                                                                ^~~~~
      |                                                                |
      |                                                                const char **
/tmp/ctranspile1133628376/align-columns.mochi.c:34:62: note: expected ‘int *’ but argument is of type ‘const char **’
   34 | static int** list_append_intptr(int **arr, size_t *len, int *val) {
      |                                                         ~~~~~^~~
/tmp/ctranspile1133628376/align-columns.mochi.c:154:18: warning: assignment to ‘const char ***’ from incompatible pointer type ‘int **’ [-Wincompatible-pointer-types]
  154 |         fmtLines = list_append_intptr(fmtLines, &fmtLines_len, words);
      |                  ^
/tmp/ctranspile1133628376/align-columns.mochi.c:170:12: error: expected expression before ‘{’ token
  170 |     return { {"text": fmtLines}, {"width": width} };
      |            ^
/tmp/ctranspile1133628376/align-columns.mochi.c: In function ‘printFmt’:
/tmp/ctranspile1133628376/align-columns.mochi.c:174:18: error: request for member ‘text’ in something not a structure or union
  174 |     int lines = f.text;
      |                  ^
/tmp/ctranspile1133628376/align-columns.mochi.c:175:18: error: request for member ‘width’ in something not a structure or union
  175 |     int width = f.width;
      |                  ^
/tmp/ctranspile1133628376/align-columns.mochi.c:177:16: warning: implicit declaration of function ‘len’; did you mean ‘mblen’? [-Wimplicit-function-declaration]
  177 |     while (i < len(lines)) {
      |                ^~~
      |                mblen
/tmp/ctranspile1133628376/align-columns.mochi.c:178:26: error: subscripted value is neither array nor pointer nor vector
  178 |         int words = lines[i];
      |                          ^
/tmp/ctranspile1133628376/align-columns.mochi.c:182:57: error: subscripted value is neither array nor pointer nor vector
  182 |             line = str_concat(str_concat(line, pad(words[j], width[j], align)), " ");
      |                                                         ^
/tmp/ctranspile1133628376/align-columns.mochi.c:182:67: error: subscripted value is neither array nor pointer nor vector
  182 |             line = str_concat(str_concat(line, pad(words[j], width[j], align)), " ");
      |                                                                   ^

