tests/rosetta/transpiler/C/align-columns.c
// Generated by Mochi 0.10.32 on 2025-07-25 19:53 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>

size_t split_len;
size_t rstripEmpty_len;

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static int* list_append_int(int *arr, size_t *len, int val) {
    arr = realloc(arr, (*len + 1) * sizeof(int));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static int** list_append_intptr(int **arr, size_t *len, int *val) {
    arr = realloc(arr, (*len + 1) * sizeof(int*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

static char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

const char* text = "Given$a$text$file$of$many$lines,$where$fields$within$a$line\nare$delineated$by$a$single$'dollar'$character,$write$a$program\nthat$aligns$each$column$of$fields$by$ensuring$that$words$in$each\ncolumn$are$separated$by$at$least$one$space.\nFurther,$allow$for$each$word$in$a$column$to$be$either$left\njustified,$right$justified,$or$center$justified$within$its$column.";

const char* * split(const char* s, const char* sep) {
    const char* *parts = NULL;
    size_t parts_len = 0;
    const char* cur = "";
    int i = 0;
    while (i < strlen(s)) {
        if (((strlen(sep) > 0) && ((i + strlen(sep)) <= strlen(s))) && (strcmp(_substring(s, i, i + strlen(sep)), sep) == 0)) {
            parts = list_append_str(parts, &parts_len, cur);
            cur = "";
            i = i + strlen(sep);
        } else {
            cur = str_concat(cur, _substring(s, i, i + 1));
            i = i + 1;
        }
    }
    parts = list_append_str(parts, &parts_len, cur);
    return split_len = parts_len, parts;
}

const char* * rstripEmpty(const char* * words, size_t words_len) {
    size_t n = words_len;
    while ((n > 0) && (strcmp(words[n - 1], "") == 0)) {
        n = n - 1;
    }
    return rstripEmpty_len = words_len, words;
}

const char* spaces(int n) {
    const char* out = "";
    int i = 0;
    while (i < n) {
        out = str_concat(out, " ");
        i = i + 1;
    }
    return out;
}

const char* pad(const char* word, int width, int align) {
    int diff = width - strlen(word);
    if (align == 0) {
        return str_concat(word, spaces(diff));
    }
    if (align == 2) {
        return str_concat(spaces(diff), word);
    }
    int left = diff / 2;
    int right = diff - left;
    return str_concat(str_concat(spaces(left), word), spaces(right));
}

int newFormatter(const char* text) {
    const char* *lines = split(text, "\n");
    size_t lines_len = split_len;
    const char* **fmtLines = NULL;
    size_t fmtLines_len = 0;
    size_t *fmtLines_lens = NULL;
    size_t fmtLines_lens_len = 0;
    int *width = NULL;
    size_t width_len = 0;
    int i = 0;
    while (i < lines_len) {
        if (strlen(lines[i]) == 0) {
            i = i + 1;
            continue;
        }
        const char* *words = rstripEmpty(split(lines[i], "$"), split_len);
        size_t words_len = rstripEmpty_len;
        fmtLines = list_append_intptr(fmtLines, &fmtLines_len, words);
        fmtLines_lens = list_append_szt(fmtLines_lens, &fmtLines_lens_len, words_len);
        int j = 0;
        while (j < words_len) {
            int wlen = strlen(words[j]);
            if (j == width_len) {
                width = list_append_int(width, &width_len, wlen);
            } else {
                if (wlen > width[j]) {
                    width[j] = wlen;
                }
            }
            j = j + 1;
        }
        i = i + 1;
    }
    return { {"text": fmtLines}, {"width": width} };
}

int printFmt(int f, int align) {
    int lines = f.text;
    int width = f.width;
    int i = 0;
    while (i < len(lines)) {
        int words = lines[i];
        const char* line = "";
        int j = 0;
        while (j < len(words)) {
            line = str_concat(str_concat(line, pad(words[j], width[j], align)), " ");
            j = j + 1;
        }
        puts(line);
        i = i + 1;
    }
    puts("");
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        int f = newFormatter(text);
        printFmt(f, 0);
        printFmt(f, 1);
        printFmt(f, 2);
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
